[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "samples-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black",
    "nltk",
    "numpy",
    "onnx",
    "onnxruntime",
    "tensorflow",
    "torch",
    "torchaudio",
    "torchvision",
]

[tool.setuptools]
py-modules = []
