[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "samples-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black",
    "diffusers[torch]",
    "nltk",
    "numpy",
    "onnx",
    "onnxruntime",
    "tensorflow",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
]

[tool.setuptools]
py-modules = []
